src/ObjetosespanolParser.java
// Generated from Objetosespanol.g4 by ANTLR 4.5.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ObjetosespanolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, OP_OR=17, 
		OP_AND=18, OP_NOT=19, OP_MAS=20, OP_MENOS=21, OP_MULTI=22, OP_DIV=23, 
		NOMBRE=24, NUMERO=25, ENDL=26, BASURA=27;
	public static final int
		RULE_programa = 0, RULE_declarar_clase = 1, RULE_declarar_funcion = 2, 
		RULE_llamar_funcion = 3, RULE_bloque = 4, RULE_linea = 5, RULE_instruccion = 6, 
		RULE_asignacion = 7, RULE_declaracion = 8, RULE_condicional = 9, RULE_ciclo = 10, 
		RULE_operacion = 11, RULE_operacion_or = 12, RULE_operacion_AND = 13, 
		RULE_factor_logico = 14, RULE_operacion_not = 15, RULE_operacion_comparacion = 16, 
		RULE_factor_comparacion = 17, RULE_operacion_suma = 18, RULE_operacion_mult = 19, 
		RULE_factor_aritmetico = 20;
	public static final String[] ruleNames = {
		"programa", "declarar_clase", "declarar_funcion", "llamar_funcion", "bloque", 
		"linea", "instruccion", "asignacion", "declaracion", "condicional", "ciclo", 
		"operacion", "operacion_or", "operacion_AND", "factor_logico", "operacion_not", 
		"operacion_comparacion", "factor_comparacion", "operacion_suma", "operacion_mult", 
		"factor_aritmetico"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'clase'", "'{'", "'}'", "'def'", "'('", "','", "')'", "'='", "'si'", 
		"'sino'", "'mientras'", "'<'", "'<='", "'>='", "'>'", "'=='", "'o'", "'y'", 
		"'no'", "'+'", "'-'", "'*'", "'/'", null, null, "';'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, "OP_OR", "OP_AND", "OP_NOT", "OP_MAS", "OP_MENOS", 
		"OP_MULTI", "OP_DIV", "NOMBRE", "NUMERO", "ENDL", "BASURA"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Objetosespanol.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ObjetosespanolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramaContext extends ParserRuleContext {
		public List<Declarar_claseContext> declarar_clase() {
			return getRuleContexts(Declarar_claseContext.class);
		}
		public Declarar_claseContext declarar_clase(int i) {
			return getRuleContext(Declarar_claseContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(42);
				declarar_clase();
				}
				}
				setState(45); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarar_claseContext extends ParserRuleContext {
		public TerminalNode NOMBRE() { return getToken(ObjetosespanolParser.NOMBRE, 0); }
		public List<Declarar_funcionContext> declarar_funcion() {
			return getRuleContexts(Declarar_funcionContext.class);
		}
		public Declarar_funcionContext declarar_funcion(int i) {
			return getRuleContext(Declarar_funcionContext.class,i);
		}
		public List<DeclaracionContext> declaracion() {
			return getRuleContexts(DeclaracionContext.class);
		}
		public DeclaracionContext declaracion(int i) {
			return getRuleContext(DeclaracionContext.class,i);
		}
		public Declarar_claseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar_clase; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitDeclarar_clase(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declarar_claseContext declarar_clase() throws RecognitionException {
		Declarar_claseContext _localctx = new Declarar_claseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declarar_clase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			match(T__0);
			setState(48);
			match(NOMBRE);
			setState(49);
			match(T__1);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==NOMBRE) {
				{
				setState(52);
				switch (_input.LA(1)) {
				case T__3:
					{
					setState(50);
					declarar_funcion();
					}
					break;
				case NOMBRE:
					{
					setState(51);
					declaracion();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declarar_funcionContext extends ParserRuleContext {
		public List<TerminalNode> NOMBRE() { return getTokens(ObjetosespanolParser.NOMBRE); }
		public TerminalNode NOMBRE(int i) {
			return getToken(ObjetosespanolParser.NOMBRE, i);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Declarar_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar_funcion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitDeclarar_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declarar_funcionContext declarar_funcion() throws RecognitionException {
		Declarar_funcionContext _localctx = new Declarar_funcionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declarar_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(T__3);
			setState(60);
			match(NOMBRE);
			setState(61);
			match(T__4);
			setState(72);
			_la = _input.LA(1);
			if (_la==NOMBRE) {
				{
				setState(62);
				match(NOMBRE);
				setState(63);
				match(NOMBRE);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(64);
					match(T__5);
					setState(65);
					match(NOMBRE);
					setState(66);
					match(NOMBRE);
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(74);
			match(T__6);
			setState(75);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Llamar_funcionContext extends ParserRuleContext {
		public List<TerminalNode> NOMBRE() { return getTokens(ObjetosespanolParser.NOMBRE); }
		public TerminalNode NOMBRE(int i) {
			return getToken(ObjetosespanolParser.NOMBRE, i);
		}
		public List<TerminalNode> NUMERO() { return getTokens(ObjetosespanolParser.NUMERO); }
		public TerminalNode NUMERO(int i) {
			return getToken(ObjetosespanolParser.NUMERO, i);
		}
		public List<Llamar_funcionContext> llamar_funcion() {
			return getRuleContexts(Llamar_funcionContext.class);
		}
		public Llamar_funcionContext llamar_funcion(int i) {
			return getRuleContext(Llamar_funcionContext.class,i);
		}
		public Llamar_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_llamar_funcion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitLlamar_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Llamar_funcionContext llamar_funcion() throws RecognitionException {
		Llamar_funcionContext _localctx = new Llamar_funcionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_llamar_funcion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(NOMBRE);
			setState(78);
			match(T__4);
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(79);
				match(NUMERO);
				}
				break;
			case 2:
				{
				setState(80);
				match(NOMBRE);
				}
				break;
			case 3:
				{
				setState(81);
				llamar_funcion();
				}
				break;
			}
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(84);
				match(T__5);
				setState(88);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(85);
					match(NUMERO);
					}
					break;
				case 2:
					{
					setState(86);
					match(NOMBRE);
					}
					break;
				case 3:
					{
					setState(87);
					llamar_funcion();
					}
					break;
				}
				}
				}
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(95);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BloqueContext extends ParserRuleContext {
		public List<LineaContext> linea() {
			return getRuleContexts(LineaContext.class);
		}
		public LineaContext linea(int i) {
			return getRuleContext(LineaContext.class,i);
		}
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloque);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(T__1);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__10) | (1L << NOMBRE))) != 0)) {
				{
				{
				setState(98);
				linea();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineaContext extends ParserRuleContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TerminalNode ENDL() { return getToken(ObjetosespanolParser.ENDL, 0); }
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public LineaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linea; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitLinea(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LineaContext linea() throws RecognitionException {
		LineaContext _localctx = new LineaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_linea);
		try {
			setState(113);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				instruccion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				asignacion();
				setState(108);
				match(ENDL);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				declaracion();
				setState(111);
				match(ENDL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public CondicionalContext condicional() {
			return getRuleContext(CondicionalContext.class,0);
		}
		public CicloContext ciclo() {
			return getRuleContext(CicloContext.class,0);
		}
		public Llamar_funcionContext llamar_funcion() {
			return getRuleContext(Llamar_funcionContext.class,0);
		}
		public TerminalNode ENDL() { return getToken(ObjetosespanolParser.ENDL, 0); }
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_instruccion);
		try {
			setState(120);
			switch (_input.LA(1)) {
			case T__8:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				condicional();
				}
				break;
			case T__10:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				ciclo();
				}
				break;
			case NOMBRE:
				enterOuterAlt(_localctx, 3);
				{
				setState(117);
				llamar_funcion();
				setState(118);
				match(ENDL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AsignacionContext extends ParserRuleContext {
		public List<TerminalNode> NOMBRE() { return getTokens(ObjetosespanolParser.NOMBRE); }
		public TerminalNode NOMBRE(int i) {
			return getToken(ObjetosespanolParser.NOMBRE, i);
		}
		public OperacionContext operacion() {
			return getRuleContext(OperacionContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_asignacion);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				match(NOMBRE);
				setState(123);
				match(NOMBRE);
				setState(124);
				match(T__7);
				setState(125);
				operacion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(NOMBRE);
				setState(127);
				match(T__7);
				setState(128);
				operacion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracionContext extends ParserRuleContext {
		public List<TerminalNode> NOMBRE() { return getTokens(ObjetosespanolParser.NOMBRE); }
		public TerminalNode NOMBRE(int i) {
			return getToken(ObjetosespanolParser.NOMBRE, i);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(NOMBRE);
			setState(132);
			match(NOMBRE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondicionalContext extends ParserRuleContext {
		public Operacion_orContext operacion_or() {
			return getRuleContext(Operacion_orContext.class,0);
		}
		public List<BloqueContext> bloque() {
			return getRuleContexts(BloqueContext.class);
		}
		public BloqueContext bloque(int i) {
			return getRuleContext(BloqueContext.class,i);
		}
		public CondicionalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condicional; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitCondicional(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondicionalContext condicional() throws RecognitionException {
		CondicionalContext _localctx = new CondicionalContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_condicional);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(T__8);
			setState(135);
			match(T__4);
			setState(136);
			operacion_or(0);
			setState(137);
			match(T__6);
			setState(138);
			bloque();
			setState(141);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(139);
				match(T__9);
				setState(140);
				bloque();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CicloContext extends ParserRuleContext {
		public Operacion_orContext operacion_or() {
			return getRuleContext(Operacion_orContext.class,0);
		}
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public CicloContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ciclo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitCiclo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CicloContext ciclo() throws RecognitionException {
		CicloContext _localctx = new CicloContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ciclo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__10);
			setState(144);
			match(T__4);
			setState(145);
			operacion_or(0);
			setState(146);
			match(T__6);
			setState(147);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionContext extends ParserRuleContext {
		public Operacion_sumaContext operacion_suma() {
			return getRuleContext(Operacion_sumaContext.class,0);
		}
		public Operacion_comparacionContext operacion_comparacion() {
			return getRuleContext(Operacion_comparacionContext.class,0);
		}
		public Operacion_orContext operacion_or() {
			return getRuleContext(Operacion_orContext.class,0);
		}
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitOperacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_operacion);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				operacion_suma(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				operacion_comparacion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				operacion_or(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Operacion_orContext extends ParserRuleContext {
		public Operacion_ANDContext operacion_AND() {
			return getRuleContext(Operacion_ANDContext.class,0);
		}
		public Operacion_orContext operacion_or() {
			return getRuleContext(Operacion_orContext.class,0);
		}
		public TerminalNode OP_OR() { return getToken(ObjetosespanolParser.OP_OR, 0); }
		public Operacion_orContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion_or; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitOperacion_or(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operacion_orContext operacion_or() throws RecognitionException {
		return operacion_or(0);
	}

	private Operacion_orContext operacion_or(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Operacion_orContext _localctx = new Operacion_orContext(_ctx, _parentState);
		Operacion_orContext _prevctx = _localctx;
		int _startState = 24;
		enterRecursionRule(_localctx, 24, RULE_operacion_or, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(155);
			operacion_AND(0);
			}
			_ctx.stop = _input.LT(-1);
			setState(162);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Operacion_orContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_operacion_or);
					setState(157);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(158);
					match(OP_OR);
					setState(159);
					operacion_AND(0);
					}
					} 
				}
				setState(164);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Operacion_ANDContext extends ParserRuleContext {
		public Factor_logicoContext factor_logico() {
			return getRuleContext(Factor_logicoContext.class,0);
		}
		public Operacion_ANDContext operacion_AND() {
			return getRuleContext(Operacion_ANDContext.class,0);
		}
		public TerminalNode OP_AND() { return getToken(ObjetosespanolParser.OP_AND, 0); }
		public Operacion_ANDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion_AND; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObjetosespanolVisitor ) return ((ObjetosespanolVisitor<? extends T>)visitor).visitOperacion_AND(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Operacion_ANDContext operacion_AND() throws RecognitionException {
		return operacion_AND(0);
	}
